argocd/infra/docker-registry-ui/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  # annotations:
    # gethomepage.dev/enabled: "false"
    # gethomepage.dev/name: Backrest
    # gethomepage.dev/icon: backrest
    # gethomepage.dev/description: "Backrest provides a WebUI which wraps the restic CLI and makes it easy to create repos, browse snapshots, and restore files."
    # gethomepage.dev/pod-selector: app=backrest
  labels:
    app.kubernetes.io/instance: docker-registry-ui-app
  name: docker-registry-ui-httproute
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: cilium-private-gateway
      namespace: cilium
      sectionName: https
  hostnames:
    - registry.yanello.net
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: docker-registry-ui
          namespace: docker-registry-ui
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
